[package]
name = "tilemap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.11"}
bevy_ecs_tilemap = {version = "0.11"}
bevy_ecs_ldtk = {version = "0.8.0"}
bevy-inspector-egui = "0.20"
bevy_rapier2d = {version = "0.22.0", features = [ "simd-stable", "debug-render-2d" ]}
